@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,18 +21,15 @@ import org.junit.jupiter.api.Test;
 import sleeper.compaction.job.CompactionJob;
 import sleeper.configuration.properties.instance.InstanceProperties;
 import sleeper.configuration.properties.table.TableProperties;
-import sleeper.core.partition.Partition;
-import sleeper.core.range.Range;
-import sleeper.core.range.Range.RangeFactory;
-import sleeper.core.range.Region;
+import sleeper.core.partition.PartitionTree;
+import sleeper.core.partition.PartitionsBuilder;
 import sleeper.core.schema.Field;
 import sleeper.core.schema.Schema;
 import sleeper.core.schema.type.IntType;
 import sleeper.core.statestore.FileInfo;
+import sleeper.core.statestore.FileInfoFactory;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -42,15 +39,17 @@ import static sleeper.configuration.properties.InstancePropertiesTestHelper.crea
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.CONFIG_BUCKET;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.DATA_BUCKET;
 import static sleeper.configuration.properties.instance.CommonProperty.FILE_SYSTEM;
-import static sleeper.configuration.properties.table.TablePropertiesTestHelper.createTestTablePropertiesWithNoSchema;
+import static sleeper.configuration.properties.table.TablePropertiesTestHelper.createTestTableProperties;
 import static sleeper.configuration.properties.table.TableProperty.COMPACTION_FILES_BATCH_SIZE;
 import static sleeper.configuration.properties.table.TableProperty.TABLE_ID;
 import static sleeper.configuration.properties.table.TableProperty.TABLE_NAME;
+import static sleeper.core.schema.SchemaTestHelper.schemaWithKey;
 
 public class BasicCompactionStrategyTest {
 
+    private static final Schema DEFAULT_SCHEMA = schemaWithKey("key");
     private final InstanceProperties instanceProperties = createTestInstanceProperties();
-    private final TableProperties tableProperties = createTestTablePropertiesWithNoSchema(instanceProperties);
+    private final TableProperties tableProperties = createTestTableProperties(instanceProperties, DEFAULT_SCHEMA);
 
     private CompactionJob.Builder jobForTable() {
         return CompactionJob.builder().tableId("table-id");
@@ -58,6 +57,7 @@ public class BasicCompactionStrategyTest {
 
     @BeforeEach
     void setUp() {
+        instanceProperties.set(FILE_SYSTEM, "file://");
         instanceProperties.set(CONFIG_BUCKET, "bucket");
         instanceProperties.set(DATA_BUCKET, "databucket");
         tableProperties.set(TABLE_NAME, "table");
@@ -68,41 +68,27 @@ public class BasicCompactionStrategyTest {
     public void shouldCreateOneJobWhenOneLeafPartitionAndOnlyTwoFiles() {
         // Given
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "2");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition partition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId(null)
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Collections.singletonList(partition);
-        List<FileInfo> fileInfos = new ArrayList<>();
-        FileInfo fileInfo1 = FileInfo.wholeFile()
-                .filename("file1")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileInfos.add(fileInfo1);
-        FileInfo fileInfo2 = FileInfo.wholeFile()
-                .filename("file2")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileInfos.add(fileInfo2);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionTree partitionTree = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .singlePartition("root")
+                .buildTree();
+        FileInfoFactory factory = FileInfoFactory.from(partitionTree);
+        FileInfo fileInfo1 = factory.rootFile("file1", 100L);
+        FileInfo fileInfo2 = factory.rootFile("file2", 100L);
+        List<FileInfo> fileInfos = List.of(fileInfo1, fileInfo2);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileInfos, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileInfos, partitionTree.getAllPartitions());
 
         // Then
         assertThat(compactionJobs).hasSize(1);
         CompactionJob expectedCompactionJob = jobForTable()
                 .jobId(compactionJobs.get(0).getId()) // Job id is a UUID so we don't know what it will be
-                .partitionId(partition.getId())
-                .inputFiles(Arrays.asList(fileInfo1.getFilename(), fileInfo2.getFilename()))
+                .partitionId("root")
+                .inputFiles(List.of("file1", "file2"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_" + partition.getId() + "/" + compactionJobs.get(0).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_root/" + compactionJobs.get(0).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         assertThat(compactionJobs).containsExactly(expectedCompactionJob);
@@ -112,28 +98,20 @@ public class BasicCompactionStrategyTest {
     public void shouldCreateCorrectJobsWhenOneLeafPartitionAndLotsOfFiles() {
         // Given
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "10");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition partition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId(null)
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Collections.singletonList(partition);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionTree partitionTree = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .singlePartition("root")
+                .buildTree();
+        FileInfoFactory factory = FileInfoFactory.from(partitionTree);
         List<FileInfo> fileInfos = new ArrayList<>();
         for (int i = 0; i < 100; i++) {
-            FileInfo fileInfo = FileInfo.wholeFile()
-                    .filename("file-" + i)
-                    .partitionId(partition.getId())
-                    .numberOfRecords(1_000_000L - i * 100L)
-                    .build();
+            FileInfo fileInfo = factory.rootFile("file-" + i, 1_000_000L - i * 100L);
             fileInfos.add(fileInfo);
         }
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileInfos, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileInfos, partitionTree.getAllPartitions());
 
         // Then
         assertThat(compactionJobs).hasSize(10).isEqualTo(IntStream.range(0, 10).mapToObj(i -> {
@@ -143,10 +121,10 @@ public class BasicCompactionStrategyTest {
             }
             return jobForTable()
                     .jobId(compactionJobs.get(i).getId()) // Job id is a UUID so we don't know what it will be
-                    .partitionId(partition.getId())
+                    .partitionId("root")
                     .inputFiles(inputFiles)
                     .isSplittingJob(false)
-                    .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_" + partition.getId() + "/" + compactionJobs.get(i).getId() + ".parquet")
+                    .outputFile("file://databucket/table-id/partition_root/" + compactionJobs.get(i).getId() + ".parquet")
                     .iteratorClassName(null)
                     .iteratorConfig(null).build();
         }).collect(Collectors.toList()));
@@ -156,32 +134,18 @@ public class BasicCompactionStrategyTest {
     public void shouldCreateNoJobsWhenNotEnoughFiles() {
         // Given
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "5");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition partition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId(null)
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Collections.singletonList(partition);
-        List<FileInfo> fileInfos = new ArrayList<>();
-        FileInfo fileInfo1 = FileInfo.wholeFile()
-                .filename("file1")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileInfos.add(fileInfo1);
-        FileInfo fileInfo2 = FileInfo.wholeFile()
-                .filename("file2")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileInfos.add(fileInfo2);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionTree partitionTree = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .singlePartition("root")
+                .buildTree();
+        FileInfoFactory factory = FileInfoFactory.from(partitionTree);
+        FileInfo fileInfo1 = factory.rootFile("file1", 100L);
+        FileInfo fileInfo2 = factory.rootFile("file2", 100L);
+        List<FileInfo> fileInfos = List.of(fileInfo1, fileInfo2);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileInfos, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileInfos, partitionTree.getAllPartitions());
 
         // Then
         assertThat(compactionJobs).isEmpty();
@@ -192,95 +156,48 @@ public class BasicCompactionStrategyTest {
         // Given - 3 partitions (root and 2 children) - the child partition called "left" has files for 2 compaction
         // jobs, the "right" child partition only has files for 1 compaction job
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "2");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition rootPartition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(false)
-                .parentPartitionId(null)
-                .childPartitionIds(Arrays.asList("left", "right"))
-                .build();
-        Partition leftChild = Partition.builder()
-                .id("left")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        Partition rightChild = Partition.builder()
-                .id("right")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Arrays.asList(rootPartition, leftChild, rightChild);
-        List<FileInfo> fileInfos = new ArrayList<>();
-        FileInfo fileInfo1 = FileInfo.wholeFile()
-                .filename("file1")
-                .partitionId("left")
-                .numberOfRecords(100L)
-                .build();
-        fileInfos.add(fileInfo1);
-        FileInfo fileInfo2 = FileInfo.wholeFile()
-                .filename("file2")
-                .partitionId("left")
-                .numberOfRecords(200L)
-                .build();
-        fileInfos.add(fileInfo2);
-        FileInfo fileInfo3 = FileInfo.wholeFile()
-                .filename("file3")
-                .partitionId("left")
-                .numberOfRecords(300L)
-                .build();
-        fileInfos.add(fileInfo3);
-        FileInfo fileInfo4 = FileInfo.wholeFile()
-                .filename("file4")
-                .partitionId("left")
-                .numberOfRecords(400L)
-                .build();
-        fileInfos.add(fileInfo4);
-        FileInfo fileInfo5 = FileInfo.wholeFile()
-                .filename("file5")
-                .partitionId("right")
-                .numberOfRecords(500L)
-                .build();
-        fileInfos.add(fileInfo5);
-        FileInfo fileInfo6 = FileInfo.wholeFile()
-                .filename("file6")
-                .partitionId("right")
-                .numberOfRecords(600L)
-                .build();
-        fileInfos.add(fileInfo6);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionTree partitionTree = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .rootFirst("root")
+                .splitToNewChildren("root", "left", "right", 123L)
+                .buildTree();
+        FileInfoFactory factory = FileInfoFactory.from(partitionTree);
+        FileInfo fileInfo1 = factory.partitionFile("left", "file1", 100L);
+        FileInfo fileInfo2 = factory.partitionFile("left", "file2", 200L);
+        FileInfo fileInfo3 = factory.partitionFile("left", "file3", 300L);
+        FileInfo fileInfo4 = factory.partitionFile("left", "file4", 400L);
+        FileInfo fileInfo5 = factory.partitionFile("right", "file5", 500L);
+        FileInfo fileInfo6 = factory.partitionFile("right", "file6", 600L);
+        List<FileInfo> fileInfos = List.of(fileInfo1, fileInfo2, fileInfo3, fileInfo4, fileInfo5, fileInfo6);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileInfos, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileInfos, partitionTree.getAllPartitions());
 
         // Then
         assertThat(compactionJobs).hasSize(3);
         CompactionJob expectedCompactionJob1 = jobForTable()
                 .jobId(compactionJobs.get(0).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("left")
-                .inputFiles(Arrays.asList(fileInfo1.getFilename(), fileInfo2.getFilename()))
+                .inputFiles(List.of("file1", "file2"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_left/" + compactionJobs.get(0).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_left/" + compactionJobs.get(0).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         CompactionJob expectedCompactionJob2 = jobForTable()
                 .jobId(compactionJobs.get(1).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("left")
-                .inputFiles(Arrays.asList(fileInfo3.getFilename(), fileInfo4.getFilename()))
+                .inputFiles(List.of("file3", "file4"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_left/" + compactionJobs.get(1).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_left/" + compactionJobs.get(1).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         CompactionJob expectedCompactionJob3 = jobForTable()
                 .jobId(compactionJobs.get(2).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("right")
-                .inputFiles(Arrays.asList(fileInfo5.getFilename(), fileInfo6.getFilename()))
+                .inputFiles(List.of("file5", "file6"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_right/" + compactionJobs.get(2).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_right/" + compactionJobs.get(2).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         assertThat(compactionJobs).containsExactly(
@@ -294,62 +211,28 @@ public class BasicCompactionStrategyTest {
         Schema schema = Schema.builder().rowKeyFields(field).build();
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "2");
         tableProperties.setSchema(schema);
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Range rootRange = new RangeFactory(schema).createRange(field, Integer.MIN_VALUE, null);
-        Partition rootPartition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(false)
-                .parentPartitionId(null)
-                .childPartitionIds(Arrays.asList("left", "right"))
-                .region(new Region(rootRange))
-                .dimension(0)
-                .build();
-        Range leftRange = new RangeFactory(schema).createRange(field, Integer.MIN_VALUE, 10);
-        Partition leftChild = Partition.builder()
-                .id("left")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .region(new Region(leftRange))
-                .build();
-        Range rightRange = new RangeFactory(schema).createRange(field, 10, null);
-        Partition rightChild = Partition.builder()
-                .id("right")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .region(new Region(rightRange))
-                .build();
-        List<Partition> partitions = Arrays.asList(rootPartition, leftChild, rightChild);
-        List<FileInfo> fileInfos = new ArrayList<>();
-        FileInfo fileInfo1 = FileInfo.wholeFile()
-                .filename("file1")
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        fileInfos.add(fileInfo1);
-        FileInfo fileInfo2 = FileInfo.wholeFile()
-                .filename("file2")
-                .partitionId("root")
-                .numberOfRecords(200L)
-                .build();
-        fileInfos.add(fileInfo2);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionTree partitionTree = new PartitionsBuilder(schema)
+                .singlePartition("root")
+                .splitToNewChildren("root", "left", "right", 10)
+                .buildTree();
+        FileInfoFactory factory = FileInfoFactory.from(partitionTree);
+        FileInfo fileInfo1 = factory.rootFile("file1", 100L);
+        FileInfo fileInfo2 = factory.rootFile("file2", 200L);
+        List<FileInfo> fileInfos = List.of(fileInfo1, fileInfo2);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileInfos, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileInfos, partitionTree.getAllPartitions());
 
         // Then
         assertThat(compactionJobs).hasSize(1);
         CompactionJob expectedCompactionJob = jobForTable()
                 .jobId(compactionJobs.get(0).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("root")
-                .inputFiles(Arrays.asList(fileInfo1.getFilename(), fileInfo2.getFilename()))
+                .inputFiles(List.of("file1", "file2"))
                 .isSplittingJob(true)
-                .childPartitions(Arrays.asList("left", "right"))
+                .childPartitions(List.of("left", "right"))
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         assertThat(compactionJobs).containsExactly(expectedCompactionJob);
